fixed light and dark mode

--- a/src/app/components/sidebar/sidebar.component.sass
+++ b/src/app/components/sidebar/sidebar.component.sass
@@ -14,6 +14,7 @@
     padding: 1.5rem
     padding-left: 0
 
+
     h3
         color: var(--text-secondary)
         margin-bottom: 1rem
@@ -50,3 +51,8 @@
     svg
         path 
             fill: var(--primary)
+
+
+
+.theme 
+    margin-top: 1.5rem
