--- a/src/app/components/sidenav/sidenav.component.sass
+++ b/src/app/components/sidenav/sidenav.component.sass
@@ -4,7 +4,7 @@
 
 .sidenav
     width: 300px
-    background: var(--card-bg)
+    background: var(--bg-accent)
     height: 100vh
     padding: 32px 0
     transition: 0.2s ease-in-out
@@ -47,7 +47,7 @@
     left: 0
     bottom: 32px
     border: none
-    background: $clr-purple
+    // background: $clr-purple
     // padding: 20px 22px
     width: 56px
     height: 48px
@@ -56,7 +56,7 @@
     cursor: pointer
 
     &:hover
-        background-color: $clr-purple-hover
+        // background-color: $clr-purple-hover
 
 .logo-light
     display: none
