--- a/src/app/pages/board-detail/board-detail.component.sass
+++ b/src/app/pages/board-detail/board-detail.component.sass
@@ -9,6 +9,8 @@
 
 .drawer-content
     height: 100%
+    background: var(--background)
+    color: var(--text)
 
 .content
     width: 100%
@@ -32,3 +34,7 @@
 
     @media (max-width: 600px)
         display: none
+
+
+.mat-drawer
+    border-color: var(--lines)
